# sea-orm-test

./: Cargo.toml
src/: main.rs
